[package]
name = "pool-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = ">=1.14, <1.17"
solana-client = ">=1.14, <1.17"
solana-program = ">=1.16, <3.0"
orca_whirlpools_client = "=3.0.0"
spl-token = {version = "=3.5.0", features = ["no-entrypoint"]}
serde = {version = "=1.0.219", features = ["derive"]}
serde_json = "=1.0.140" 