[package]
name = "pool"
version = "1.0.0"
edition = "2024"

[lib]
name = "pool"
path = "src/lib.rs"

[dependencies]
solana-sdk = ">=1.14, <1.17"
solana-client = ">=1.14, <1.17"
solana-program = ">=1.16, <3.0"
mint = {path = "../mint"}
orca_whirlpools_client = "=3.0.0"
orca_whirlpools_core = "=2.0.0"
serde = {version = "=1.0.219", features = ["derive"]}
serde_json = "=1.0.140" 